-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.15.0
-
RHEL 9.0 client with kernel 5.14.0-70.17.1.el9_0
-
3
-
9223372036854775807
RHEL 9.0 client build: https://build.whamcloud.com/job/lustre-reviews/88442/arch=x86_64,build_type=client,distro=el9.0,ib_stack=inkernel/
RHEL 8.6 server build: https://build.whamcloud.com/job/lustre-reviews/88442/arch=x86_64,build_type=server,distro=el8.6,ib_stack=inkernel/
While touching a file on RHEL 9.0 client and RHEL 8.6 server with SELinux disabled, the following LBUG occurred:
[ 244.887851] Lustre: Mounted lustre-client [ 262.185517] LustreError: 3160:0:(pack_generic.c:806:lustre_msg_string()) can't unpack non-NULL terminated string in msg 000000007f1ce61d buffer[8] len 0 [ 262.189477] LustreError: 3160:0:(layout.c:2162:__req_capsule_get()) @@@ Wrong buffer for field 'file_secctx_name' (8 of 12) in format 'LDLM_INTENT_OPEN', 0 vs. 0 (client) req@00000000edb3137f x1738309845911936/t0(0) o101->lustre-MDT0000-mdc-ffff8da3054a1000@192.168.0.166@tcp:12/10 lens 664/0 e 0 to 0 dl 0 ref 1 fl New:PQU/0/ffffffff rc 0/-1 job:'' [ 262.196650] LustreError: 3160:0:(mdc_lib.c:137:mdc_file_secctx_pack()) ASSERTION( buf_size == strlen(secctx_name) + 1 ) failed: [ 262.199072] LustreError: 3160:0:(mdc_lib.c:137:mdc_file_secctx_pack()) LBUG [ 262.200321] Pid: 3160, comm: touch 5.14.0-70.17.1.el9_0.x86_64 #1 SMP PREEMPT Tue Jun 14 11:32:10 EDT 2022 [ 262.201931] Call Trace TBD: [ 262.202400] Kernel panic - not syncing: LBUG [ 262.203138] CPU: 0 PID: 3160 Comm: touch Kdump: loaded Tainted: G OE --------- --- 5.14.0-70.17.1.el9_0.x86_64 #1
The similar failure was reported in LU-15184, and the build contained the fix.